--- a/src/pages/ForgetPassword/ForgetPassword.css
+++ b/src/pages/ForgetPassword/ForgetPassword.css
@@ -59,6 +59,12 @@ label{
     text-shadow:none;
     
 }
+.login-button:hover{
+    background:rgb(3, 88, 24);
+    color:white;
+   
+    
+}
 .mainbody{
     display: inline;
 }
