--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -1,28 +1,7 @@
-.nav-header-dashboard{
-    width: 100%;
-    height:25%;
-    background-color: rgb(80, 18, 125);
-    display: flex;
-  }
-i,h6{
-    color: aliceblue;
-    font-size: 25px;
-}
+
 .icon-btc{
     display: flex;
 }
-.dashboard-icon{
-    display: flex;
-    align-items: center;
-}
-.bell{
-    display: flex;
-    align-items: center;
-    justify-content: end;
-    width: 100%;
-    
-}
-
 .nav-side-dashboard{
     background-color: rgb(111, 26, 172);
     display: inline-block;
@@ -36,8 +15,8 @@ i,h6{
     box-shadow: none !important;
     margin: 0px 10px;
     background-color: rgba(111, 26, 172, 0.72);
-    height: 30px;
-    border-radius: 9px;
+    height: 36px;
+    border-radius: 18px;
     padding: 0px 15px;
     color: aliceblue;
  }
@@ -91,15 +70,9 @@ a{
 #picture{
     width: 12% !important;
 }
-.logo{
-    content: url("/src/assets/1.png");
-    width: 50px;
-    cursor: none;
-}
-.logo:not(:hover){
-    cursor: none;
-}
-.admin-tab,.member-tab:hover{
+
+
+.admin-tab,.member-tab:hover:active{
     font-weight: bold;
 }
 
@@ -162,11 +135,68 @@ p{
     justify-content: left;
     width: 100%;
     text-align: right;
-    height: 31px !important;
+    height: 36px !important;
     border-color: rgba(82, 78, 78, 0.151);
-    margin-top: 11px;
+    margin-top: 5px;
     color: #ffff;
     background-color: #cc9df69c !important;
-    border-radius: 9px !important;
+    border-radius: 18px !important;
   }
+.icon-user, .icon-group,.icon-cogs,.icon-laptop,.icon-tasks,.icon-random,.icon-quote-right,.icon-file-alt{
+    font-size: large;
+    margin-left: 10px;
+}
+.gitlogin{
+    background:#50127d86;
+    color:white;
+    font-size:11px;
+    font-weight:bold;
+    width:74px;
+    height: 30px;
+    padding:3px 0px;
+    border-radius:18px;
+    text-shadow:none;
+}
+.nav-header-dashboard{
+    width: 100%;
+    height:25%;
+    background-color: rgb(80, 18, 125);
+    display: flex;
+  }.logo{
+    content: url("/src/assets/1.png");
+    width: 50px;
+    cursor: none;
+}.logo:not(:hover){
+    cursor: none;
+}
+.bell{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
+}
+.dashboard-icon{
+    display: flex;
+    align-items: center;
+}
+i,h6{
+    color: aliceblue;
+    font-size: 25px;
+}
 
+.active {
+    color: rgb(60, 3, 95);
+    font-size: large;
+    text-shadow: 3px 5px 9px #330b4f;
+}
+@media screen and (min-width: 400px) {
+    body {
+      
+    }
+  }
+  
+  @media screen and (min-width: 800px) {
+    body {
+     
+    }
+  }
