--- a/src/pages/ForgetPassword/ForgetPassword.css
+++ b/src/pages/ForgetPassword/ForgetPassword.css
@@ -59,6 +59,18 @@ label{
     text-shadow:none;
     
 }
+.back-button{
+    background:rgb(17, 125, 133);
+    color:white;
+    font-size:11px;
+    font-weight:bold;
+    width:74px;
+    height: 30px;
+    padding:3px 0px;
+    border-radius:18px;
+    text-shadow:none;
+    
+}
 .login-button:hover{
     background:rgb(3, 88, 24);
     color:white;
