--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -46,6 +46,23 @@
     box-shadow:0px 22px 7px rgba(76,10,86,0.47);
     background-color:#330b4f;
 }
+.new-one-button1{
+ 
+    border: none;
+    box-shadow: none !important;
+    margin: 0px 10px;
+    background-color: rgba(15, 93, 5, 0.72);
+    height: 36px;
+    border-radius: 18px;
+    padding: 0px 15px;
+    color: aliceblue;
+    font-family: 'Vazir', Arial, sans-serif;
+    font-weight:normal; 
+ }
+.new-one-button1:hover{
+    box-shadow:0px 22px 7px rgba(76,10,86,0.47);
+    background-color:#330b4f;
+}
 .bodytable{
     background-color: rgba(235, 235, 243, 0.882);
     height: 100vh;
@@ -75,7 +92,7 @@ Nav{
     padding: 3px;
     background-color:rgb(187, 142, 232) ;
     display: inline-block;
-    box-shadow: 1px 3px 23px 5px rgba(141,141,141,0.4);
+    /* box-shadow: 1px 3px 23px 5px rgba(141,141,141,0.4); */
 }
 li{
     margin: 10px;
@@ -194,7 +211,14 @@ p{
     text-shadow:none;
     font-family: 'Vazir', Arial, sans-serif;
     font-weight:normal;
+    border: none;
 }
+.idnum{
+    font-family: 'Vazir', Arial, sans-serif;
+    font-weight:normal;
+
+} 
+
 .nav-header-dashboard{
     width: 100%;
     height:25%;
@@ -264,4 +288,12 @@ i,h6{
   #title{
     font-family: 'Vazir', Arial, sans-serif;
     font-weight:normal;
+    text-align-last: center;
   }
+#button{
+    margin-right: 3px !important;
+    color: #330b4f;
+}
+td{
+    text-align-last: center;
+}
